docs/style.css
p.caption {
  color: #777;
  margin-top: 10px;
}
p code {
  white-space: inherit;
}
pre {
  word-break: normal;
  word-wrap: normal;
}
pre code {
  white-space: inherit;
}

div.infobox {
  padding: 1em 1em 1em 1em;
  margin-bottom: 10px;
  border: 2px solid #74a180;
  border-radius: 10px;
}

